added the flames page on homepage

--- a/templates/home/base.html
+++ b/templates/home/base.html
@@ -151,6 +151,9 @@
                         <a class="nav-link article-link" style="text-decoration: underline;
                         color: rgb(255, 165, 62);" href="{% url 'articles' %}">Job Articles</a>
                     </li>
+                    <li class="nav-item">
+                        <a class="nav-link article-link" style="color: rgb(253, 135, 0);" href="{% url 'flames' %}">Summer Training🔥</a>
+                    </li>
                     <!--  <li class="nav-item">
                         <a class="nav-link" href="#">Contact</a>
                     </li> -->
