updated flames page

--- a/templates/home/course_detail.html
+++ b/templates/home/course_detail.html
@@ -604,7 +604,7 @@
                     </div>
 
                     <!-- Registration Button -->
-                    <button class="join-course-btn" id="registerButton">Register for This Course</button>
+                    <button class="join-course-btn" id="registerButton">Book My Slot for FREE!</button>
                 </div>
             </div>
         </div>
@@ -648,7 +648,7 @@
                     <option value="Graduate">Graduate</option>
                 </select>
             </div>
-            <button type="submit" id="submitRegistration" class="registration-form-submit">Register Now</button>
+            <button type="submit" id="submitRegistration" class="registration-form-submit">All Set!</button>
         </form>
     </div>
 </div>
