--- a/templates/administration/base.html
+++ b/templates/administration/base.html
@@ -144,6 +144,10 @@
 
     {% endblock %}
 
+    <!-- Add jQuery before other scripts -->
+    <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"></script>
+
 </head>
 
 <body style="background-attachment: fixed;">
@@ -257,6 +261,17 @@
                                     <i class="ti ti-server"></i>
                                 </span>
                                 <span class="hide-menu">Courses</span>
+
+                            </a>
+                        </li>
+
+                        <li class="sidebar-item">
+                            <a class="sidebar-link {% block flames_active %} {% endblock %}"
+                                href="{% url 'admin_flames_courses' %}" aria-expanded="false">
+                                <span>
+                                    <i class="ti ti-flame"></i>
+                                </span>
+                                <span class="hide-menu">FLAMES</span>
 
                             </a>
                         </li>
@@ -523,8 +538,8 @@
     {% block myjs %}
     {% endblock %}
 
-
-    <script src="{% static 'js/dashboard/libs/jquery/dist/jquery.min.js' %}"></script>
+    <!-- Remove duplicate jQuery -->
+    <!-- <script src="{% static 'js/dashboard/libs/jquery/dist/jquery.min.js' %}"></script> -->
     <script src="{% static 'js/dashboard/libs/bootstrap/dist/js/bootstrap.bundle.min.js' %}"></script>
     <script src="{% static 'js/dashboard/js/sidebarmenu.js' %}"></script>
     <script src="{% static 'js/dashboard/js/app.min.js' %}"></script>
