--- a/templates/administration/flames/registrations.html
+++ b/templates/administration/flames/registrations.html
@@ -159,14 +159,14 @@
     }
 
     .modal-details .detail-label {
-        font-weight: 600;
-        color: #666;
+        font-weight: 700;
+        color: #ffffff;
         font-size: 14px;
     }
 
     .modal-details .detail-value {
-        font-size: 16px;
-        color: #333;
+        font-size: 14px;
+        color: #ffffff;
     }
 
     .dataTables_wrapper .dataTables_length select {
@@ -373,10 +373,6 @@
                 </button>
             </div>
         </div>
-    </div>
-
-    <div class="">
-
     </div>
 
     <!-- Stats Cards -->
